# hal-discovery

./: LICENSE  README.md
blue-pill/: Cargo.toml  Embed.toml
blue-pill/src/: 0_initial.rs  1_led.rs
book/: book.toml
book/src/: SUMMARY.md  blinking_an_led.md  chapter_1.md  debug_messages_and_cargo_embed.md  external_hardware.md  programming_the_chip.md  project_setup.md  turning_on_an_led.md
common/rtt_target_logger/: Cargo.toml
common/rtt_target_logger/src/: lib.rs
f3discovery/: Cargo.toml  Embed.toml
f3discovery/.cargo/: config
f3discovery/src/: main.rs
