[package]
name = "blue-pill"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
# Target chip for 'cargo flash'. Keep in sync with Embed.toml.
chip = "stm32f103c8"

[dependencies]

cortex-m-rt = "0.6.12"
panic-semihosting = "0.5.3"
embedded-hal = "0.2.4"

[dependencies.stm32f1xx-hal]
features = ["stm32f103"]
version = "0.6.1"
