[package]
name = "f3discovery"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.4"
panic-semihosting = "0.5.3"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc"]
version = "0.4.3"

[features]
rt = ["stm32f3xx-hal/rt"]
