[package]
name = "f3discovery"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
# Target chip for 'cargo flash'. Keep in sync with Embed.toml.
chip = "STM32F303VCTx"

[dependencies]
bbqueue = "0.4.10"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.4"
log = { version = "0.4.11", features = ["max_level_info", "release_max_level_info"] }
lsm303dlhc = "0.2.0"
micromath = { version = "1.0.1", features = ["vector"] }
nb = "1.0.0"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
rtt_target_logger = { path = "../common/rtt_target_logger" }
stm32f3xx-hal = { version = "0.5.0", features = ["stm32f303xc"] }

[features]
rt = ["stm32f3xx-hal/rt"]
